Fix dropdown border on mobile (#896)

--- a/src/Trade/components/MarketStatistics/MarketStatistics.css
+++ b/src/Trade/components/MarketStatistics/MarketStatistics.css
@@ -49,6 +49,7 @@
     /* height: 52px; */
     /* border-top: none; */
     border-right: 4px solid var(--trade-borders);
+    border-top: none;
   }
 }
 
